# stroke-api

./: pyproject.toml
stroke_api/: API_tuto.ipynb  api.py
