[tool.poetry]
name = "stroke-api"
version = "0.1.0"
description = "Ce projet contient les fichiers nécessaires au brief Stroke data - Développement d'une API REST et visualisation."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
fastapi = "^0.116.1"
streamlit = "^1.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
